--- a/src/App.css
+++ b/src/App.css
@@ -231,8 +231,8 @@ body.lightMode {
 /* overall page styling */
 .page {
     width: 100%;
-    height: max-content;
-    /* min-height: 100vh; */
+    /* height: max-content; */
+    min-height: 100vh;
     /* display: flex;
     justify-content: center;
     align-items: center; */
@@ -245,7 +245,7 @@ body.lightMode {
 
 /* dev home page */
 .flesh-bg {
-    /* position: relative; */
+    position: relative;
     margin: 0;
     height: auto;
     width: 100%;
@@ -259,8 +259,51 @@ img.bone-bg {
     mask-image: url(./images/dev-home-images/xray-cursor.png);
     mask-repeat: no-repeat;
     mask-size: 150px;
-    /* cursor: none; */
 }
+
+.eyes {
+    /* background-color: red; */
+    height: 4.5%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 55%;
+    /* left: 50%; */
+    /* transform: translateY(-50%); */
+}
+
+.eye {
+    width: 4.5%;
+    height: 100%;
+    margin: 1%;
+    /* background-color: seagreen; */
+    display: inline-block;
+    border-radius: 20% 20% 20% 40%;
+    position: relative;
+    overflow: hidden;
+}
+
+.pupil {
+    width: 20%;
+    height: 30%;
+    background: url(./images/dev-home-images/pupil.png) no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+/* .pupils {
+    background: url(./images/dev-home-images/pupils.png) no-repeat;
+    background-size: 100% auto;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+} */
 
 .about {
     background-color: chartreuse;
