--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,7 @@ body.lightMode {
 .page {
     width: 100%;
     /* height: max-content; */
-    min-height: 100vh;
+    /* min-height: 100vh; */
     /* display: flex;
     justify-content: center;
     align-items: center; */
@@ -304,6 +304,32 @@ img.bone-bg {
     position: absolute;
     top: 0;
 } */
+
+/* designer home page */
+.container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background: url(./images/design-home-images/1-background.png);
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+#scene,
+.layer {
+    width: 100%;
+    height: 100%;
+}
+
+.container #scene .layer img {
+    /* width: 100%; */
+    height: 100%;
+    object-fit: cover;
+}
+
+.minigame-icon {
+    cursor: pointer;
+}
 
 .about {
     background-color: chartreuse;
