--- a/src/App.css
+++ b/src/App.css
@@ -296,14 +296,6 @@ img.bone-bg {
     transform: translate(-50%, -50%);
     border-radius: 50%;
 }
-/* .pupils {
-    background: url(./images/dev-home-images/pupils.png) no-repeat;
-    background-size: 100% auto;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-} */
 
 /* designer home page */
 .container {
@@ -327,14 +319,47 @@ img.bone-bg {
     object-fit: cover;
 }
 
-.minigame-icon {
-    cursor: pointer;
-}
-
+/* about page */
 .about {
     background-color: chartreuse;
 }
 
+.about-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.about-text {
+    width: 65%;
+    padding: 5%;
+    background-color: chocolate;
+}
+
+.about-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+    padding: 5%;
+    background-color: darkblue;
+}
+
+.about-avatar-image {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: solid 10px darkred;
+    background-color: chocolate;
+    margin-bottom: 10%;
+}
+
+.about-caption {
+    text-align: center;
+}
+
+/* projects page */
 .projects {
     background-color: crimson;
 }
