--- a/src/App.css
+++ b/src/App.css
@@ -362,6 +362,151 @@ img.bone-bg {
 /* projects page */
 .projects {
     background-color: crimson;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projects-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap-reverse;
+    align-items: center;
+    justify-content: center;
+    padding: 1%;
+}
+
+.project-card {
+    width: 25%;
+    /* background-color: aquamarine; */
+    height: 250px;
+    margin: 1%;
+}
+
+.card-content {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: relative;
+    /* padding: 15em 5em; */
+    transition: transform 2s;
+    transform-style: preserve-3d;
+    border-radius: 20px;
+}
+
+.project-card:hover .card-content {
+    transform: rotateY(.5turn);
+}
+
+.card-front,
+.card-back {
+    width: 100%;
+    height: 100%;
+position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+backface-visibility: hidden;
+transform-style: preserve-3d;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+border-radius: 20px;
+}
+
+.card-front img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.front-titles {
+    position: absolute;
+    width: 100%;
+    padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 50%;
+    transform: translateY(-50%) translateZ(6rem);
+}
+
+.card-title {
+    font-size: 3vw;
+    text-transform: uppercase;
+}
+
+.card-subtitle {
+    font-size: .75rem;
+    transform: translateZ(6rem);
+    font-weight: 700;
+    opacity: .7;
+}
+
+.card-description {
+    transform: translateZ(6rem);
+    height: 55%;
+    overflow: scroll;
+    padding: 5%;
+    backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    /* font-weight: 400;
+    font-size: 1.5rem; */
+}
+
+.card-tools {
+    transform: translateZ(3rem);
+    opacity: .7;
+    display: inline-flex;
+    height: 25%;
+    width: 100%;
+    flex-wrap: wrap;
+    padding: 0% 5%;
+    align-items: center;
+    justify-content: center;
+    font-size: .75rem;
+}
+
+.card-tool{ 
+    margin: 0% 5%;
+    text-align: center;
+}
+
+.card-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 20%;
+    transform: translateZ(6rem);
+    border-radius: 0px 0px 20px 20px;
+    background-color: deeppink;
+}
+
+.demo-link,
+.github-link {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+    color: currentColor;
+    width: 100%;
+    height: 100%;
+}
+
+.demo-link {
+    background-color: darkgreen;
+    border-radius: 0px 0px 0px 20px;
+}
+
+.card-back {
+    transform: rotateY(.5turn);
+    background-color: slateblue;
 }
 
 .contact {
