--- a/src/App.css
+++ b/src/App.css
@@ -377,10 +377,11 @@ img.bone-bg {
     padding: 1%;
 }
 
+/* dev project cards  */
 .project-card {
-    width: 25%;
+    width: 45%;
     /* background-color: aquamarine; */
-    height: 250px;
+    height: 45vh;
     margin: 1%;
 }
 
@@ -403,18 +404,18 @@ img.bone-bg {
 .card-back {
     width: 100%;
     height: 100%;
-position: absolute;
-top: 0;
-bottom: 0;
-left: 0;
-right: 0;
-backface-visibility: hidden;
-transform-style: preserve-3d;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-border-radius: 20px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
 }
 
 .card-front img {
@@ -491,7 +492,7 @@ border-radius: 20px;
 .demo-link,
 .github-link {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     text-decoration: none;
     color: currentColor;
@@ -507,6 +508,91 @@ border-radius: 20px;
 .card-back {
     transform: rotateY(.5turn);
     background-color: slateblue;
+}
+
+/* design project cards  */
+.card-hover-area {
+    perspective: 1000px;
+    width: 22.5%;
+    /* background-color: aquamarine; */
+    height: 45vh;
+    margin: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.des-project-card {
+    transform-style: preserve-3d;
+    height: 90%;
+    width: 90%;
+    border-radius: 20px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.des-project-card img {
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.des-card-content {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    transition: 0.5s ease-out;
+    background-color: rgba(255, 255, 255, 0.671);
+    /* z-index: 5; */
+}
+
+.des-card-title {
+    font-size: 3vw;
+    width: 100%;
+    /* height: 50%; */
+    text-align: center;
+    text-transform: uppercase;
+    padding: 5%;
+    /* background-color: rgba(255, 255, 255, 0.671); */
+}
+
+.des-card-subtitle {
+    font-size: .75rem;
+    text-align: center;
+    font-weight: 700;
+    /* height: 30%; */
+    width: 100%;
+    opacity: .7;
+    padding: 5%;
+    /* background-color: rgba(255, 255, 255, 0.671); */
+}
+
+.flickr-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: currentColor;
+    background-color: darkorange;
+    position: relative;
+    /* bottom: 0; */
+    justify-self: flex-end;
+    width: 100%;
+    height: 20%;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.btn-text {
+    margin-left: 5px;
 }
 
 .contact {
