contact page done

--- a/src/App.css
+++ b/src/App.css
@@ -637,6 +637,45 @@ img.bone-bg {
     margin-left: 5px;
 }
 
+/* contact page styling */
 .contact {
     background-color: chocolate;
+    height: 100vh;
+}
+
+h1 {
+    text-align: center;
+    margin: 2%;
+    text-transform: uppercase;
+}
+
+.social-links {
+    background-color: rgb(17, 233, 89);
+    /* padding: 5%; */
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80%;
+    
+}
+
+.social-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 20%;
+    height: 20vh;
+    background-color: chocolate;
+    margin: 2%;
+    text-decoration: none;
+}
+
+.social-item .fas,
+.social-item .fab {
+font-size: 4vw;
+margin: 2%;
 }
