--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,22 @@ height: 100vh;
 scroll-behavior: smooth;
 }
 
+/* 
+design colors
+pink: #fd5176 
+purple: #863aa8
+orange: #fa9624
+yellow: #ffd74b
+darkpurple: #2c1b4f
+
+dev colors
+aqua: #4fe0d8
+lightpink: #bd76bd
+blue: #0080f9
+purple: #4a3a9e
+darkpurple: #2c1641
+*/
+
 ::selection {
 background-color: #2c1b4f;
 }
@@ -419,16 +435,17 @@ img.bone-bg {
 }
 
 /* styling filter menu */
-.filter-checkbox {
-  display: none;
-}
-
 .filter-menu {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     padding: 2%;
     width: 100%;
+    height: 25vh;
+    background: rgb(0, 0, 0);
+    position: sticky;
+    top: 0%;
+    z-index: 20;
 }
 
 .filter-menu li {
@@ -478,6 +495,9 @@ img.bone-bg {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    /* background: rgb(255, 4, 4); */
+    height: 100vh;
+    overflow: scroll;
     padding: 1%;
 }
 
@@ -767,4 +787,8 @@ h1 {
 .social-item .fab {
 font-size: 4vw;
 margin: 2%;
+}
+
+.hide {
+    display: none;
 }
