--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
  /* Component Stylesheets */
 
  /* About Page */
- @import 'components/aboutPage/about.css';
- @import 'components/aboutPage/designAbout.css';
- @import 'components/aboutPage/devAbout.css';
+@import 'components/aboutPage/about.css';
+@import 'components/aboutPage/designAbout.css';
+@import 'components/aboutPage/devAbout.css';
+
+/* Contact Page */
+@import 'components/contactPage/contact.css';
+@import 'components/contactPage/devContact.css';
+@import 'components/contactPage/designContact.css';
 
 /* ------- universal styling ------- */
 * {
@@ -754,128 +759,11 @@ darkpurple: #2c1641
     margin-left: 5px;
 }
 
-
-/* contact page styling */
-.contact {
-    height: 100vh;
-    background-image: url(./images/contact/netherlandsMap.png);
-    background-size: 50% auto;
-    background-blend-mode: soft-light;
-    background-repeat: no-repeat;
-    background-position: right top;
-}
-
-.contact.dev {
-    background-color: #4b3a9e;
-}
-
-.contact.des {
-    background-color: #fd5176;
-}
-
 h1 {
     text-align: center;
     margin: 2%;
     text-transform: uppercase;
-}
-
-.social-links {
-    /* background-color: rgb(17, 233, 89); */
-    /* padding: 5%; */
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 80%;
-    
-}
-
-.social-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    width: 20%;
-    height: 25vh;
-    color: currentColor;
-    margin: 2%;
-    padding: 2% 1%;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 20px;
-    /* border: 2px solid white; */
-    transition: .5s ease;
-}
-
-.dev .social-links .social-item {
-    background-color: #2c1641a2;
-}
-.des .social-links .social-item {
-    background-color: #2c1b4fa2;
-}
-
-.dev .social-links .social-item.linkedin:hover {
-    background-color: #0081f9d3;
-}
-
-.dev .social-links .social-item.gmail:hover {
-    background-color: #4a3a9ed3;
-}
-
-.dev .social-links .social-item.whatsapp:hover {
-    background-color: #4fe0d9d3;
-}
-
-.dev .social-links .social-item.github:hover {
-    background-color: #bd76bdd3;
-}
-
-.dev .social-links .social-item.address:hover {
-    background-color: #cf8572d3;
-}
-
-/* 
-design colors
-pink: #fd5176 
-orange: #fa9624
-purple: #863aa8
-yellow: #ffd74b
-darkpurple: #2c1b4f
-
-dev colors
-aqua: #4fe0d8
-lightpink: #bd76bd
-blue: #0080f9
-purple: #4a3a9e
-darkpurple: #2c1641
-*/
-
-.des .social-links .social-item.linkedin:hover {
-    background-color: #0081f9d3;
-}
-
-.des .social-links .social-item.gmail:hover {
-    background-color: #863aa8d3;
-}
-
-.des .social-links .social-item.whatsapp:hover {
-    background-color: #ffd74bd3;
-}
-
-.des .social-links .social-item.instagram:hover {
-    background-color: #fa9624d3;
-}
-
-.des .social-links .social-item.address:hover {
-    background-color: #c48d4ed3;
-}
-
-.social-item .fas,
-.social-item .fab {
-font-size: 4vw;
-margin: 2%;
+    font-size: 5vw;
 }
 
 .hide {
