--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
  /* Component Stylesheets */
+ /* Nav Menu */
+@import 'components/navMenu/nav.css';
+@import 'components/navMenu/designNav.css';
+@import 'components/navMenu/devNav.css';
+
+/* Togglebar */
+@import 'components/toggleBar/togglebar.css';
 
  /* Home Page */
 @import 'components/homePage/devHome.css';
@@ -53,7 +60,7 @@ body {
     font-family: 'Lexend', sans-serif;
 }
 
-body.lightMode {
+body.designMode {
     background: rgb(134,58,168);
     background: radial-gradient(circle, rgba(134,58,168,1) 20%, rgba(253,81,118,1) 100%);
 }
@@ -64,226 +71,6 @@ h3 {
     font-family: 'Paytone One', sans-serif;
 }
 
-/* toggle-bar  */
-.toggle-bar {
-    position: fixed;
-    bottom: 5%;
-    width: 100%;
-    z-index: 100;
-}
-
-.label {
-    width: 15%;
-    height: 30px;  
-    background: rgb(44,27,79);
-    background: linear-gradient(90deg, rgba(44,27,79,1) 0%, rgba(253,81,118,1) 25%, rgba(0,128,249,1) 75%, rgba(44,22,65,1) 100%);
-    background-size: 200%;
-    background-position: right;
-    display: flex;
-    border-radius: 50px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px;
-    left: 50%;
-    position: relative;
-    transform: translateX(-50%) scale(2);
-    transition: background-position 1.5s linear;
-}
-
-.ball {
-    background-color: white;
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: 50%;
-    left: 0%;
-    transform: translateY(-50%) translateX(2px);
-    border-radius: 50%;
-    transition: left 0.6s linear, transform 0.5s ease;
-}
-
-#menu-checkbox,
-.toggle-checkbox {
-    opacity: 0;
-    position: absolute;
-}
-
-.toggle-checkbox:checked + .label:hover,
-.label:hover {
-    background-position: center;
-}
-
-.toggle-checkbox:checked + .label {
-    background-position: left;
-}
-
-.toggle-checkbox:checked + .label .ball {
-    transform: translateY(-50%) translateX(-27px);
-    left: 100%;
-}
-
-.fa-pencil-alt {
-    margin-left: 5px;
-}
-
-/* menu */
-.menu {
-    position: fixed;
-    width: 70px;
-    left: 50%;
-    top: 2.5%;
-    transform: translateX(-50%);
-    z-index: 100;
-}
-
-.btn {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    position: absolute;
-    overflow: hidden; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-
-.btn.dev {
-    background-color: #2c1641a2;
-}
-
-.btn.des {
-    background-color: #fd5176a2;
-}
-
-.btn::before {
-    --scale: 0;
-    
-    content: attr(data-tooltip);
-    padding: .5rem;
-    border-radius: 50%;
-    text-align: center;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: translateX(-50%) scale(var(--scale));
-    transition: 150ms transform;
-}
-
-.btn.dev::before {
-    background-color: #4a3a9e;
-    color: #4fe0d8;
-}
-
-.btn.des::before {
-    background-color: #fd5176;
-    color: #ffd74b;
-}
-
-.btn .fas {
-    font-size: 36px;
-}
-
-.btn:hover::before {
-    --scale: 1;
-}
-
-.btn.dev:hover {
-    color:  #4fe0d8;
-}
-
-.btn.des:hover {
-    color:  #ffd74b;
-}
-
-.menuBtn,
-.closeBtn {
-    position: absolute;
-    transition: 0.3s ease;
-}
-
-.closeBtn {
-    transform: translateY(50px);
-    opacity: 0;
-}
-
-.btn:not(:first-child) {
-    opacity: 0;
-    z-index: -2;
-    transition: 0.3s cubic-bezier(0.87, -0.41, 0.19, 1.44);
-}
-
-.btn:nth-child(2) {
-    left: 0;
-    transition-delay: 0s;
-}
-
-.btn:nth-child(3) {
-    left: 0;
-    top: 0;
-    transition-delay: 0.1s;
-}
-
-.btn:nth-child(4) {
-    top: 0;
-    transition-delay: 0.2s;
-}
-
-.btn:nth-child(5) {
-    left: 0;
-    top: 0;
-    transition-delay: 0.3s;
-}
-
-.btn:nth-child(6) {
-    left: 0;
-    transition-delay: 0.4s;
-}
-
-#menu-checkbox:checked ~ .toggle-menu .btn .menuBtn {
-    transform: translateY(-50px);
-    opacity: 0;
-}
-
-#menu-checkbox:checked ~ .toggle-menu .btn .closeBtn {
-    transform: translateY(0px);
-    opacity: 1;
-}
-
-#menu-checkbox:checked ~ .toggle-menu .btn:nth-child(2) {
-    left: -100px;
-    opacity: 1;
-}
-
-#menu-checkbox:checked ~ .toggle-menu .btn:nth-child(3) {
-    left: -75px;
-    top: 72.5px;
-    opacity: 1;
-}
-
-#menu-checkbox:checked ~ .toggle-menu .btn:nth-child(4) {
-    top: 100px;
-    opacity: 1;
-}
-
-#menu-checkbox:checked ~ .toggle-menu .btn:nth-child(5) {
-    left: 75px;
-    top: 72.5px;
-    opacity: 1;
-}
-
-#menu-checkbox:checked ~ .toggle-menu .btn:nth-child(6) {
-    left: 100px;
-    opacity: 1;
-}
-
-/* overall page styling */
 .page {
     width: 100%;
     /* height: max-content; */
