--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@
 @import 'components/aboutPage/designAbout.css';
 @import 'components/aboutPage/devAbout.css';
 
+/* Projects Page */
+@import 'components/projectsPage/projects.css';
+@import 'components/projectsPage/designProjects.css';
+@import 'components/projectsPage/devProjects.css';
+
 /* Contact Page */
 @import 'components/contactPage/contact.css';
 @import 'components/contactPage/devContact.css';
@@ -179,264 +184,6 @@ h3 {
 .filter-menu.dev li label:hover span {
     width: 250px;
     height: 250px;
-}
-
-/* projects page */
-.projects {
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.projects-container {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    /* flex-wrap: wrap-reverse; */
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: scroll;
-    padding: 1%;
-}
-
-/* dev project cards  */
-.project-card {
-    width: 45%;
-    height: 45vh;
-    margin: 1%;
-}
-
-.card-content {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    position: relative;
-    transition: transform 2s;
-    transform-style: preserve-3d;
-    border-radius: 20px;
-}
-
-.project-card:hover .card-content {
-    transform: rotateY(.5turn);
-}
-
-.card-front,
-.card-back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-}
-
-.card-front img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-}
-
-/* 
-design colors
-pink: #fd5176 
-purple: #863aa8
-orange: #fa9624
-yellow: #ffd74b
-darkpurple: #2c1b4f
-
-dev colors
-aqua: #4fe0d8
-lightpink: #bd76bd
-blue: #0080f9
-purple: #4a3a9e
-darkpurple: #2c1641
-*/
-
-.front-titles {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    background-color: #2c16419d;
-    border-radius: 20px;
-    /* top: 50%; */
-    top: 0%;
-    /* transform: translateY(-50%) translateZ(6rem); */
-    transform: translateZ(6rem);
-}
-
-.card-title {
-    font-size: 3vw;
-    text-transform: uppercase;
-}
-
-.card-subtitle {
-    font-size: .75rem;
-    font-weight: 700;
-    opacity: .7;
-}
-
-.card-description {
-    height: 55%;
-    overflow: scroll;
-    padding: 5%;
-    /* backface-visibility: hidden; */
-    display: flex;
-    justify-content: center;
-}
-
-.card-tools {
-    opacity: .7;
-    display: inline-flex;
-    height: 25%;
-    width: 100%;
-    flex-wrap: wrap;
-    padding: 0% 5%;
-    align-items: center;
-    justify-content: center;
-    font-size: .75rem;
-}
-
-.card-tool{ 
-    margin: 0% 5%;
-    text-align: center;
-}
-
-.card-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 20%;
-    /* transform: translateZ(6rem); */
-    border-radius: 0px 0px 20px 20px;
-    background-color: #0080f9;
-    
-}
-
-.demo-link,
-.github-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: currentColor;
-    width: 100%;
-    height: 100%;
-}
-
-.demo-link {
-    background-color: #4fe0d9d3;
-    /* background-color: #bd76bd; */
-    border-radius: 0px 0px 0px 20px;
-}
-
-.card-back {
-    transform: rotateY(.5turn);
-    background-color: #4a3a9e;
-}
-
-/* design project cards  */
-.card-hover-area {
-    perspective: 1000px;
-    width: 22.5%;
-    /* background-color: aquamarine; */
-    height: 45vh;
-    margin: 1%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.des-project-card {
-    transform-style: preserve-3d;
-    height: 90%;
-    width: 90%;
-    border-radius: 20px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.des-project-card img {
-    height: 80%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.des-card-content {
-    position: absolute;
-    /* top: 50%; */
-    height: 80%;
-    top: 0%;
-    /* transform: translateY(-50%); */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    transition: 0.5s ease-out;
-    background-color: #863aa8bd;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.des-card-title {
-    font-size: 2.5vw;
-    /* width: 100%; */
-    text-align: center;
-    text-transform: uppercase;
-    padding: 5%;
-}
-
-.des-card-subtitle {
-    font-size: .75rem;
-    text-align: center;
-    font-weight: 700;
-    /* height: 30%; */
-    width: 100%;
-    opacity: .7;
-    padding: 5%;
-    /* background-color: rgba(255, 255, 255, 0.671); */
-}
-
-.flickr-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: currentColor;
-    background-color: darkorange;
-    position: relative;
-    /* bottom: 0; */
-    justify-self: flex-end;
-    width: 100%;
-    height: 20%;
-    border-radius: 0px 0px 20px 20px;
-}
-
-.btn-text {
-    margin-left: 5px;
 }
 
 h1 {
