--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,3 @@
- /* Component Stylesheets */
- /* Nav Menu */
-@import 'components/navMenu/nav.css';
-@import 'components/navMenu/designNav.css';
-@import 'components/navMenu/devNav.css';
-
-/* Togglebar */
-@import 'components/toggleBar/togglebar.css';
-
- /* Home Page */
-@import 'components/homePage/devHome.css';
-@import 'components/homePage/designHome.css';
-
- /* About Page */
-@import 'components/aboutPage/about.css';
-@import 'components/aboutPage/designAbout.css';
-@import 'components/aboutPage/devAbout.css';
-
-/* Projects Page */
-@import 'components/projectsPage/projects.css';
-@import 'components/projectsPage/designProjects.css';
-@import 'components/projectsPage/devProjects.css';
-
-/* Contact Page */
-@import 'components/contactPage/contact.css';
-@import 'components/contactPage/devContact.css';
-@import 'components/contactPage/designContact.css';
-
 /* ------- universal styling ------- */
 * {
     padding: 0px;
@@ -34,19 +6,19 @@
 }
 
 html {
-height: 100vh;
-scroll-behavior: smooth;
+    height: 100vh;
+    scroll-behavior: smooth;
 }
 
 ::selection {
-background-color: #2c1b4f;
+    background-color: #2c1b4f;
 }
 
 .App,
 #root,
 body {
-width: 100%;
-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .App {
@@ -85,107 +57,6 @@ h3 {
     align-items: center; */
 }
 
-/* styling filter menu */
-.filter-menu {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    /* padding: 2%; */
-    width: 100%;
-    height: 10vh;
-    /* background: rgb(253, 6, 6); */
-}
-
-.filter-menu li {
-    list-style: none;
-    width: 10%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    /* background-color:#a2a9af; */
-}
-  
-  .filter-menu li label {
-    width: 90%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 2%;
-    text-align: center;
-    transition: background-color 300ms ease;
-    border-radius: 20px;
-    cursor: pointer;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    /* background-color:#220222; */
-}
-
-.filter-menu.des li input:checked ~ label {
-    background-color:#fd5176 ;
-    color: #ffd74b;
-}
-
-.filter-menu.des li label::before {
-    content: ' ';
-    position: absolute;
-    top: -1%;
-    left: -1%;
-    right: -1%;
-    bottom: -1%;
-    z-index: -1;
-    background: rgb(134,58,168);
-    background: linear-gradient(90deg, rgba(134,58,168,1) 0%, rgba(253,81,118,1) 20%, rgba(250,150,36,1) 50%, rgba(255,215,75,1) 80%, rgba(134,58,168,1) 100%);
-    background-size: 300%;
-    border-radius: 20px;
-    opacity: 0;
-    transition: 05s;
-}
-
-.filter-menu.des li:hover label::before,
-.filter-menu.des li label:hover::before {
-    opacity: 1;
-    animation: glow 5s linear infinite;
-}
-
-@keyframes glow {
-    0% {
-        background-position: 0%;
-    }
-    100% {
-        background-position: 300%;
-    }
-}
-
-.filter-menu.dev li input:checked ~ label {
-    background-color:#4a3a9e;
-    color: #4fe0d9d3;
-}
-
-.dot {
-    position: absolute;
-    display: block;
-    width: 0px;
-    height: 0px;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    background: #4a3a9e;
-    transition: width 0.5s linear, height 0.5s linear;
-    z-index: -1;
-}
-
-.filter-menu.dev li label:hover {
-    color: #4fe0d9d3;
-}
-/* .filter-menu.dev li:hover label span, */
-.filter-menu.dev li label:hover span {
-    width: 250px;
-    height: 250px;
-}
-
 h1 {
     text-align: center;
     margin: 2%;
@@ -196,3 +67,36 @@ h1 {
 .hide {
     display: none;
 }
+
+/* Component Stylesheets */
+/* Nav Menu */
+@import 'components/navMenu/nav.css';
+@import 'components/navMenu/designNav.css';
+@import 'components/navMenu/devNav.css';
+
+/* Togglebar */
+@import 'components/toggleBar/togglebar.css';
+
+/* Home Page */
+@import 'components/homePage/devHome.css';
+@import 'components/homePage/designHome.css';
+
+/* About Page */
+@import 'components/aboutPage/about.css';
+@import 'components/aboutPage/designAbout.css';
+@import 'components/aboutPage/devAbout.css';
+
+/* Filter Menu */
+@import 'components/filterMenu/filterMenu.css';
+@import 'components/filterMenu/designFilters.css';
+@import 'components/filterMenu/devFilters.css';
+
+/* Projects Page */
+@import 'components/projectsPage/projects.css';
+@import 'components/projectsPage/designProjects.css';
+@import 'components/projectsPage/devProjects.css';
+
+/* Contact Page */
+@import 'components/contactPage/contact.css';
+@import 'components/contactPage/devContact.css';
+@import 'components/contactPage/designContact.css';
