--- a/src/components/contactPage/contact.css
+++ b/src/components/contactPage/contact.css
@@ -29,9 +29,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: baseline;
     width: 15%;
-    height: 25vh;
+    height: 25vmin;
     overflow: scroll;
     margin: 2%;
     padding: 2%;
