--- a/src/components/contactPage/devContact.css
+++ b/src/components/contactPage/devContact.css
@@ -6,22 +6,7 @@
     background-color: #2c1641a2;
 }
 
-.dev .social-links-container .social-item.linkedin:hover {
-    background-color: #0081f9d3;
-}
-
-.dev .social-links-container .social-item.github:hover {
-    background-color: #bd76bdd3;
-}
-
-.dev .social-links-container .social-item.whatsapp:hover {
-    background-color: #4fe0d9d3;
-}
-
-.dev .social-links-container .social-item.gmail:hover {
-    background-color: #4a3a9ed3;
-}
-
-.dev .social-links-container .social-item.address:hover {
-    background-color: #cf8572d3;
+.dev .social-links-container .social-item:hover {
+    background: #000000;
+    color: rgb(171, 171, 241);
 }
