--- a/src/components/toggleBar/togglebar.css
+++ b/src/components/toggleBar/togglebar.css
@@ -5,11 +5,6 @@
     z-index: 100;
 }
 
-#toggle-checkbox {
-    opacity: 0;
-    position: absolute;
-}
-
 .toggle-bar {
     width: 15%;
     height: 30px;  
@@ -37,7 +32,7 @@
     left: 0%;
     transform: translateY(-50%) translateX(2px);
     border-radius: 50%;
-    transition: left 0.6s linear, transform 0.5s ease;
+    transition: left 0.5s linear, transform 0.5s linear;
 }
 
 .fa-pencil-alt {
